redmine/12-redmine-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redmine
  namespace: redmine
  labels:
    app: redmine
    type: statefulset
spec:
  serviceName: "redmine"
  replicas: 1
  selector:
    matchLabels:
      app: redmine
      type: pod
  template:
    metadata:
      labels:
        app: redmine
        type: pod
    spec:
      containers:
        - name: redmine
          image: bitnami/redmine:4.1.1-debian-10-r209
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: data
              mountPath: /bitnami/redmine
            - name: themes
              mountPath: /opt/bitnami/redmine/public/themes
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data
        - name: themes
          persistentVolumeClaim:
            claimName: themes
