redmine/13-redmine-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redmine
  namespace: redmine
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx
    kubernetes.io/ingress.allow-http: "false"
spec:
  tls:
  - hosts:
      - "redmine.domain.tld"
    secretName: "redmine-tls"
  rules:
  - host: "redmine.domain.tld"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: "redmine"
            port:
              number: 3000
